syntax = "proto3";

package users;

option go_package = "github.com/ScareTrow/grpc_user_auth/proto";

import "google/protobuf/empty.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetAllUsers(google.protobuf.Empty) returns (GetAllUsersResponse) {}
  rpc GetUserByID(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty) {}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
}

message CreateUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  bool admin = 4;
}

message CreateUserResponse {
  string id = 1;
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  bool admin = 4;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  bool admin = 5;
}

message DeleteUserRequest {
  string id = 1;
}
